# anchor-python-visualization

./: .buildinfo  .flake8  AUTHORS.rst  CHANGELOG.rst  LICENSE  README.md  _labelled_features.py  genindex.html  histogramPlot.py  histogram_plot.py  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  tox.ini  visualizeFeatures.py  visualize_features.py
.github/workflows/: maven_dev.yml  maven_master.yml  pr_master.yml  push_dev.yml  push_master.yml
_modules/: embeddings.html  histogram_plot.html  index.html  projection.html  visualize.html  visualize_features.html
_modules/anchor_python_visualization/: histogram_plot.html  visualize_features.html
_modules/anchor_python_visualization/embeddings/: exceptions.html  features.html  label.html
_modules/anchor_python_visualization/projection/: factory.html  projector.html
_modules/anchor_python_visualization/visualize/: factory.html  visualize_features_scheme.html
_modules/embeddings/: _labels.html  exceptions.html  features.html  label.html  load_features.html
_modules/projection/: _derive_utilities.html  _pca.html  _tsne.html  factory.html  projector.html
_modules/visualize/: _image_sprite.html  _plot_features_projection.html  _tensorboard_export.html  factory.html  visualize_features_scheme.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/anchor_python_visualization/: index.rst.txt
_sources/autoapi/embeddings/: index.rst.txt
_sources/autoapi/histogram_plot/: index.rst.txt
_sources/autoapi/projection/: index.rst.txt
_sources/autoapi/visualize/: index.rst.txt
_sources/autoapi/visualize_features/: index.rst.txt
_static/: basic.css  classic.css
autoapi/: index.html
autoapi/anchor_python_visualization/: index.html
autoapi/anchor_python_visualization/embeddings/: index.html
autoapi/anchor_python_visualization/histogram_plot/: index.html
autoapi/anchor_python_visualization/projection/: index.html
autoapi/anchor_python_visualization/visualize/: index.html
autoapi/anchor_python_visualization/visualize_features/: index.html
autoapi/embeddings/: index.html
autoapi/embeddings/_identifiers/: index.html
autoapi/embeddings/_labels/: index.html
autoapi/embeddings/exceptions/: index.html
autoapi/embeddings/features/: index.html
autoapi/embeddings/label/: index.html
autoapi/embeddings/load_features/: index.html
autoapi/histogram_plot/: index.html
autoapi/projection/: index.html
autoapi/projection/_derive_utilities/: index.html
autoapi/projection/_pca/: index.html
autoapi/projection/_tsne/: index.html
autoapi/projection/factory/: index.html
autoapi/projection/projector/: index.html
autoapi/visualize/: index.html
autoapi/visualize/_image_sprite/: index.html
autoapi/visualize/_plot_features_projection/: index.html
autoapi/visualize/_tensorboard_export/: index.html
autoapi/visualize/factory/: index.html
autoapi/visualize/visualize_features_scheme/: index.html
autoapi/visualize_features/: index.html
docs/: conf.py  index.rst  requirements.txt
embeddings/: __init__.py  _labels.py  exceptions.py  label.py  load_features.py
features/: __init__.py  _labels.py  exceptions.py  labelled_features.py  load_features.py
projection/: __init__.py  _derive_utilities.py  _pca.py  _tsne.py  factory.py  pca.py  projection.py  projector.py  tsne.py
projection/test/: test_projection.py
src/anchor-python-visualization/embeddings/: _labels.py  load_features.py
src/anchor-python-visualization/projection/: _derive_utilities.py  _pca.py  factory.py  projector.py
src/anchor-python-visualization/visualize/: _image_sprite.py
src/anchor_python_visualization/: __init__.py  histogram_plot.py  visualize_features.py
src/anchor_python_visualization/embeddings/: __init__.py  _identifiers.py  _labels.py  exceptions.py  features.py  label.py
src/anchor_python_visualization/projection/: __init__.py  _derive_utilities.py  _pca.py  _tsne.py  factory.py  projector.py
tests/: _utilities.py  test_histogram_plot.py  test_visualize_features.py
tests/embeddings/: _data_frame_fixture.py  test_identifiers.py
tests/projection/: test_projection.py
tests/resources/: features.csv  histogram.csv
visualize/: __init__.py  _image_sprite.py  _plot_features_projection.py  _tensorboard_export.py  factory.py  plotProjection2D.py  plot_features_projection.py  visualizeScheme.py  visualize_features_scheme.py
(+58 files in other folders)
