# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = anchor_python_visualization
description = Python scripts for visualizing outputs from computer vision or other machine learning efforts.
author = Owen Feehan
author_email = owenfeehan@users.noreply.github.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://www.anchoranalysis.org/developer_guide_repositories_anchor_python_visualization.html
# Add here related links, for example:
project_urls =
     Documentation = https://www.anchoranalysis.org


# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    pandas>=1.1
    tensorflow>=2.1.0
    plotly>=4.5.4
    opencv-python>=4.4.0.42
    numpy>=1.18.1
    scikit-learn>=0.22.2.post1
    tensorboard>=2.1.0
    seaborn>=0.10.0
    matplotlib>=3.1.3
    anchor_python_utilities @ git+https://github.com/anchoranalysis/anchor-python-utilities.git#egg=anchor_python_utilities

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install anchor-python-visualization[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = anchor_python_visualization.module:function
# For example:
# console_scripts =
#     fibonacci = anchor_python_visualization.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov anchor_python_visualization --cov-report term-missing --cov-report xml
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    venv
    .venv    

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.2
package = anchor_python_visualization
extensions = 

# Fix for coverage so that it produces relative-paths in the coverage.xml
# See https://github.com/pytest-dev/pytest-cov/issues/130#issuecomment-269955465
[coverage:run]
#relative_files = True
parallel = True

[coverage:paths]
source =
   src/anchor_python_visualization
   */site-packages/anchor_python_visualization

